--- a/brands/templates/brand_delete.html
+++ b/brands/templates/brand_delete.html
@@ -8,6 +8,6 @@
 <form method="post">
     {% csrf_token %}
     <button type="submit" class="btn btn-danger">Sim, excluir</button>
-    <a href="{% url 'brand_list' %}" class="btn btn-secondary">Cancelar</a>
+    <a href="{% url 'brands:list' %}" class="btn btn-secondary">Cancelar</a>
 </form>
 {% endblock %}
