--- a/brands/templates/brand_form.html
+++ b/brands/templates/brand_form.html
@@ -24,7 +24,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-success">Salvar</button>
-            <a href="{% url 'brand_list' %}" class="btn btn-secondary">Cancelar</a>
+            <a href="{% url 'brands:list' %}" class="btn btn-secondary">Cancelar</a>
             </form>
         </div>
     </div>
