--- a/core/templates/components/_header.html
+++ b/core/templates/components/_header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand text-white" href="{% url 'brand_list' %}">Cadê, Tchê!</a>
+    <a class="navbar-brand text-white" href="{% url 'brands:list' %}">Cadê, Tchê!</a>
   </div>
 </nav>
