--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -23,7 +23,7 @@
           {% comment %} {% endif %}   {% endcomment %}
           {% comment %} {% if perms.brands.view_brand %} {% endcomment %}
             <li>
-              <a href="{% url 'brand_list' %}" class="nav-link px-0 align-middle">
+              <a href="{% url 'brands:list' %}" class="nav-link px-0 align-middle">
                 <i class="bi bi-shop fs-4"></i>
                 <span class="ms-1">Marcas</span>
               </a>
