adjust _sidebar component

--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -15,7 +15,7 @@
           </li>
           {% comment %} {% if perms.suppliers.view_supplier %} {% endcomment %}
             <li>
-              <a href="#" class="nav-link px-0 align-middle">
+              <a href="{% url 'suppliers:list' %}" class="nav-link px-0 align-middle">
                 <i class="bi bi-truck fs-4"></i>
                 <span class="ms-1">Fornecedores</span>
               </a>
