--- a/core/templates/components/_sidebar.html
+++ b/core/templates/components/_sidebar.html
@@ -47,7 +47,7 @@
           {% comment %} {% endif %} {% endcomment %}
           {% comment %} {% if perms.inflows.view_inflow %} {% endcomment %}
             <li>
-              <a href="#" class="nav-link px-0 align-middle">
+              <a href="{% url 'inflows:list' %}" class="nav-link px-0 align-middle">
                 <i class="bi bi-arrow-down-left-square fs-4"></i>
                 <span class="ms-1">Entradas</span>
               </a>
