--- a/inflows/templates/inflows_form.html
+++ b/inflows/templates/inflows_form.html
@@ -238,7 +238,7 @@
                     </h6>
                 </div>
                 <div class="card-body">
-                    <div class="d-grid gap-2">
+                    {% comment %} <div class="d-grid gap-2">
                         <a href="{% url 'products:create' %}" class="btn btn-outline-primary btn-sm">
                             <i class="bi bi-plus me-2"></i>Novo Produto
                         </a>
@@ -246,7 +246,7 @@
                             <i class="bi bi-plus me-2"></i>Novo Fornecedor
                         </a>
                     </div>
-                </div>
+                </div> {% endcomment %}
             </div>
         </div>
     </div>
